# rust-customer

./: .env.example  Cargo.toml  Dockerfile  Makefile
.github/workflows/: build-by-tag.yaml
configuration/: development.toml
src/application/: Cargo.toml
src/application/src/: commands.rs  commands_test.rs  dtos.rs  handlers.rs  handlers_test.rs  lib.rs  mappers.rs  mappers_test.rs  repositories.rs  settings.rs
src/application/src/ports/output/: mod.rs  publishers.rs
src/domain/src/: builders.rs  entities.rs  entities_test.rs  error.rs  events.rs  lib.rs
src/infrastructure/src/: entities.rs  lib.rs  postgres_customer_repository.rs  postgres_customer_repository_test.rs  schema.rs
src/messaging/: Cargo.toml
src/messaging/avro/schemas/: customer_created_event_avro_model.avsc
src/messaging/src/: lib.rs
src/messaging/src/kafka/: mod.rs  producer.rs  publishers.rs
src/messaging/src/kafka/avro/: mod.rs  models.rs
src/messaging/src/kafka/avro/events/: customer_created_event_avro_model.rs  customer_updated_event_avro_model.rs  mod.rs
src/presentation/src/: app_state.rs  config.rs  error.rs  lib.rs  requests.rs  responses.rs
src/presentation/src/api/: api_customer.rs  mod.rs
src/presentation/src/api/docs/: api_doc.rs  customer_api_doc.rs  health_check_api_doc.rs  info_api_doc.rs  mod.rs
src/starter/: Cargo.toml
src/starter/src/: lib.rs
